test/files/neg/sealed-java-enums.check
sealed-java-enums.scala:5: error: match may not be exhaustive.
It would fail on the following inputs: BLOCKED, TERMINATED, TIMED_WAITING
  def f(state: State) = state match {
                        ^
one error found
